# simple-feed

./: .env  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  main.py
app/db/: redis.py
app/models/: schemas.py
tests/: test_main.py
