[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Shrivatsa"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.62.0"
uvicorn = "^0.12.3"
redis = "^3.5.3"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-testdox = "^2.0.1"
coverage = "^5.0.3"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
